pull country info api request

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,10 @@ body {
   justify-content: space-between;
 }
 
+.app__left {
+  flex: 0.8
+}
+
 .app__stats {
   display: flex;
   justify-content: space-between;
