--- a/src/InfoBox.css
+++ b/src/InfoBox.css
@@ -1,7 +1,12 @@
 .infoBox {
     flex: 1;
     cursor: pointer;
-    padding-top: 10px
+    padding-top: 10px;
+    width: 95%;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    text-align: center;
 }
 
 .infoBox:not(:last-child) {
@@ -28,15 +33,28 @@
   margin-bottom: 0.5rem;
 }
 
+.infoBox__cases > span {
+  color: #6c757d;
+  font-weight: 400;
+}
+
 .infoBox__total {
   color: #6c757d;
   font-weight: 700 !important;
   font-size: 0.8rem !important;
-  margin-top: 15px !important;
+  margin-top: 10px !important;
 }
 
-@media (max-width: 750px) {
+.infoBox__title {
+  font-size: 1.2rem !important;
+  margin-bottom: 10px !important;
+  box-shadow: 0 1px #6c757d !important;
+}
+
+@media (max-width: 1300px) {
   .infoBox:not(:last-child) {
     margin-bottom: 10px;
+    margin-right: 0;
   }
 }
+
