--- a/src/InfoBox.css
+++ b/src/InfoBox.css
@@ -30,7 +30,7 @@
   color: #be1937;
   font-weight: 600;
   font-size: 1.75rem;
-  margin-bottom: 0.5rem;
+  margin: 0.5rem 0;
 }
 
 .infoBox__cases > span {
@@ -41,17 +41,17 @@
 .infoBox__total {
   color: #6c757d;
   font-weight: 700 !important;
-  font-size: 0.8rem !important;
-  margin-top: 10px !important;
+  font-size: .8rem !important;
+  margin-top: .7rem !important;
 }
 
 .infoBox__title {
   font-size: 1.2rem !important;
-  margin-bottom: 10px !important;
+  padding-bottom: 5px !important;
   box-shadow: 0 1px #6c757d !important;
 }
 
-@media (max-width: 1300px) {
+@media (max-width: 1500px) {
   .infoBox:not(:last-child) {
     margin-bottom: 10px;
     margin-right: 0;
