--- a/src/InfoBox.css
+++ b/src/InfoBox.css
@@ -64,6 +64,12 @@
   font-size: 1.2rem !important;
 }
 
+@media (max-width: 800px) {
+  .infoBox {
+    width: 100%;
+  }
+}
+
 @media (max-width: 1500px) {
   .infoBox:not(:last-child) {
     margin-bottom: 10px;
