--- a/src/InfoBox.css
+++ b/src/InfoBox.css
@@ -6,13 +6,13 @@
     justify-content: center;
     align-self: center;
     text-align: center;
-    background-color: #1a1a1a !important;
-    color: #dadada !important;
+    background-color: #ffffff !important;
+    color: #888888 !important;
     white-space:nowrap
 }
 
 .infoBox:hover {
-  background-color: #353535 !important;
+  background-color: #f5f5f5 !important;
 }
 
 .infoBox:not(:last-child) {
@@ -22,7 +22,7 @@
 .infoBox--selected {
   border-top: 10px solid greenyellow;
   padding: 0;
-  background-color: #2c2c2c !important;
+  box-shadow: 0px 0px 20px 10px rgb(200, 200, 200) !important;
 }
 
 .infoBox--red {
@@ -49,12 +49,12 @@
 }
 
 .infoBox__cases > span {
-  color: #bbbbbb;
+  color: #9c9b9b;
   font-weight: 400;
 }
 
 .infoBox__total {
-  color: #bbbbbb !important;
+  color: #9c9b9b !important;
   font-weight: 700 !important;
   font-size: .8rem !important;
   margin-top: .7rem !important;
