--- a/src/components/InfoBox.css
+++ b/src/components/InfoBox.css
@@ -7,11 +7,11 @@
     align-self: center;
     text-align: center;
     color: #888888 !important;
-    white-space:nowrap
+    white-space:nowrap;
 }
 
 .infoBox:hover {
-  background-color: rgb(255, 250, 239) !important;
+  box-shadow: 0px 0px 20px 2px rgb(100, 100, 100) !important;
 }
 
 .infoBox:not(:last-child) {
@@ -21,7 +21,9 @@
 .infoBox--selected {
   border-top: 10px solid greenyellow;
   padding: 0;
-  box-shadow: 0px 0px 20px 10px rgb(200, 200, 200) !important;
+  box-shadow: 0px 0px 10px 5px rgba(100, 100, 100, 0.637) !important;
+  transform: translate(0px, -5px);
+  transition: all 0.8s linear;
 }
 
 .infoBox--red {
