--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -1,15 +1,21 @@
 .table {
     margin-top: 20px;
     overflow: scroll;
+    overflow-x: hidden;
     height: 400px;
-    color: #6a5d5d;
+    color: #7c7c7c;
     min-width: 100%;
-    background-color: antiquewhite;
+}
+
+h3 {
+    color: #c73754;
 }
 
 .table tr {
     display: flex;
     justify-content: space-between;
+    
+    border-radius: 10px;
 }
 
 .table__img {
@@ -20,7 +26,7 @@
     padding: 0.5rem;
 }
 .table tr:nth-of-type(odd) {
-    background-color: #f3f2f8;
+    background-color: #ffc4c4;
 }
 
 @media (max-width: 800px) {
