--- a/src/components/InfoBox.css
+++ b/src/components/InfoBox.css
@@ -19,7 +19,7 @@
 }
 
 .infoBox--selected {
-  border-top: 10px solid greenyellow;
+  border-top: 10px solid #56ac77;
   padding: 0;
   box-shadow: 0px 0px 10px 5px rgba(100, 100, 100, 0.637) !important;
   transform: translate(0px, -5px);
@@ -27,7 +27,7 @@
 }
 
 .infoBox--red {
-  border-color: red;
+  border-color: #E38594;
 }
 
 .infoBox--orange {
@@ -35,7 +35,7 @@
 }
 
 .infoBox__cases--green {
-  color: lightgreen !important;
+  color: #56ac77 !important;
 }
 
 .infoBox__cases {
@@ -46,7 +46,7 @@
 }
 
 .infoBox__deaths {
-  color: red !important;
+  color: #E38594 !important;
 }
 
 .infoBox__cases > span {
